--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This is an emulator for the ANSI TIA/EIA-825 protocol, also referred to as Telecommunications Device for the Deaf (TDD) 
- or TTY.  These devices allow people who are hard of hearing to communicate over analog phone lines using a keyboard and
-text display.  It's essentially a very simple FSK modem.
+This is an emulator for the ANSI TIA/EIA-825 protocol, also referred to as Telecommunications Device for the Deaf (TDD) or TTY.  These devices allow people who are hard of hearing to communicate over analog phone lines using a keyboard and text display.  It's essentially a very simple FSK modem.
